Refactor project structure and update security
Removed legacy .mvn directory, old DTOs, models, repositories, resolvers, and services. Migrated DTOs and mappers to new package structure. Added new security components (AppUserDetailsService, CustomUserDetails, PasswordPolicy, etc.) and updated SecurityConfig. Updated tests and configuration files to match new structure. This refactor streamlines the codebase, improves maintainability, and enhances security handling.

Co-Authored-By: Adrian Eduardo Granados Vargas <adrian.granados.vargas@est.una.ac.cr>
Co-Authored-By: CalderonAllan <176315065+CalderonAllan@users.noreply.github.com>