@@ -1,16 +1,24 @@
 package una.ac.cr.FitFlow.service.CompletedActivity;
 
+import lombok.RequiredArgsConstructor;
+
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import lombok.RequiredArgsConstructor;
-import una.ac.cr.FitFlow.dto.CompletedActivityDTO;
+import una.ac.cr.FitFlow.dto.CompletedActivity.CompletedActivityInputDTO;
+import una.ac.cr.FitFlow.dto.CompletedActivity.CompletedActivityOutputDTO;
+import una.ac.cr.FitFlow.mapper.MapperForCompletedActivity;
 import una.ac.cr.FitFlow.model.CompletedActivity;
 import una.ac.cr.FitFlow.model.Habit;
 import una.ac.cr.FitFlow.model.ProgressLog;
-import una.ac.cr.FitFlow.model.User;
 import una.ac.cr.FitFlow.repository.CompletedActivityRepository;
 import una.ac.cr.FitFlow.repository.HabitRepository;
 import una.ac.cr.FitFlow.repository.ProgressLogRepository;
@@ -19,109 +27,122 @@ import una.ac.cr.FitFlow.repository.ProgressLogRepository;
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class CompletedActivityServiceImplementation implements CompletedActivityService {
+
     private final CompletedActivityRepository completedActivityRepository;
     private final HabitRepository habitRepository;
     private final ProgressLogRepository progressLogRepository;
+    private final MapperForCompletedActivity mapper;
 
-    private CompletedActivityDTO convertToDto(CompletedActivity completedActivity) {
-        return CompletedActivityDTO.builder()
-                .id(completedActivity.getId())
-                .completedAt(completedActivity.getCompletedAt())
-                .notes(completedActivity.getNotes())
-                .progressLogId(
-                        completedActivity.getProgressLog() != null ? completedActivity.getProgressLog().getId() : null)
-                .habitId(completedActivity.getHabit() != null ? completedActivity.getHabit().getId() : null)
-                .build();
-    }
-
-    private CompletedActivity convertToEntity(CompletedActivityDTO dto) {
-        CompletedActivity entity = CompletedActivity.builder()
-                .id(dto.getId())
-                .completedAt(dto.getCompletedAt())
-                .notes(dto.getNotes())
-                .build();
-
-        if (dto.getHabitId() != null) {
-            Habit habit = habitRepository.findById(dto.getHabitId())
-                    .orElseThrow(() -> new IllegalArgumentException("Habit no encontrado: " + dto.getHabitId()));
-            entity.setHabit(habit);
-        }
-
-        if (dto.getProgressLogId() != null) {
-            ProgressLog progressLog = progressLogRepository.findById(dto.getProgressLogId())
-                    .orElseThrow(
-                            () -> new IllegalArgumentException("ProgressLog no encontrado: " + dto.getProgressLogId()));
-            entity.setProgressLog(progressLog);
-        }
-
-        return entity;
+    private CompletedActivityOutputDTO toDto(CompletedActivity c) {
+        return mapper.toDto(c);
     }
 
     @Override
     @Transactional
-    public CompletedActivityDTO createCompletedActivity(CompletedActivityDTO completedActivityDTO) {
-        CompletedActivity completedActivity = convertToEntity(completedActivityDTO);
-        completedActivity = completedActivityRepository.save(completedActivity);
-        return convertToDto(completedActivity);
+    public CompletedActivityOutputDTO createCompletedActivity(CompletedActivityInputDTO input) {
+      
+        if (input.getCompletedAt() == null)
+            throw new IllegalArgumentException("completedAt es obligatorio.");
+        if (input.getHabitId() == null)
+            throw new IllegalArgumentException("habitId es obligatorio.");
+        if (input.getProgressLogId() == null)
+            throw new IllegalArgumentException("progressLogId es obligatorio.");
+
+        Habit habit = habitRepository.findById(input.getHabitId())
+                .orElseThrow(() -> new IllegalArgumentException("Habit no encontrado: " + input.getHabitId()));
+
+        ProgressLog pl = progressLogRepository.findById(input.getProgressLogId())
+                .orElseThrow(() -> new IllegalArgumentException("ProgressLog no encontrado: " + input.getProgressLogId()));
+
+        CompletedActivity entity = CompletedActivity.builder().build();
+        mapper.copyBasics(input, entity);
+        entity.setHabit(habit);
+        entity.setProgressLog(pl);
+
+        CompletedActivity saved = completedActivityRepository.save(entity);
+        return toDto(saved);
     }
 
     @Override
     @Transactional
-    public CompletedActivityDTO updateCompletedActivity(Long id, CompletedActivityDTO completedActivityDTO) {
+    public CompletedActivityOutputDTO updateCompletedActivity(Long id, CompletedActivityInputDTO input) {
         CompletedActivity entity = completedActivityRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Completed Activity not found"));
-        entity.setCompletedAt(completedActivityDTO.getCompletedAt());
-        entity.setNotes(completedActivityDTO.getNotes());
-        if (completedActivityDTO.getHabitId() != null) {
-            Habit habit = habitRepository.findById(completedActivityDTO.getHabitId())
-                    .orElseThrow(() -> new IllegalArgumentException("Habit no encontrado: " +
-                            completedActivityDTO.getHabitId()));
+                .orElseThrow(() -> new IllegalArgumentException("CompletedActivity no encontrado: " + id));
+
+        mapper.copyBasics(input, entity);
+
+        if (input.getHabitId() != null) {
+            Habit habit = habitRepository.findById(input.getHabitId())
+                    .orElseThrow(() -> new IllegalArgumentException("Habit no encontrado: " + input.getHabitId()));
             entity.setHabit(habit);
         }
-        if (completedActivityDTO.getProgressLogId() != null) {
-            ProgressLog progressLog = progressLogRepository.findById(completedActivityDTO.getProgressLogId())
-                    .orElseThrow(() -> new IllegalArgumentException("ProgressLog no encontrado: " +
-                            completedActivityDTO.getProgressLogId()));
-            entity.setProgressLog(progressLog);
+        if (input.getProgressLogId() != null) {
+            ProgressLog pl = progressLogRepository.findById(input.getProgressLogId())
+                    .orElseThrow(() -> new IllegalArgumentException("ProgressLog no encontrado: " + input.getProgressLogId()));
+            entity.setProgressLog(pl);
         }
-        entity = completedActivityRepository.save(entity);
-        return convertToDto(entity);
+
+        CompletedActivity saved = completedActivityRepository.save(entity);
+        return toDto(saved);
     }
 
     @Override
     @Transactional
     public void deleteCompletedActivity(Long id) {
-        CompletedActivity completedActivity = completedActivityRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Completed Activity not found"));
-        completedActivityRepository.delete(completedActivity);
+        CompletedActivity entity = completedActivityRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("CompletedActivity no encontrado: " + id));
+        completedActivityRepository.delete(entity);
     }
 
     @Override
-    public CompletedActivityDTO findCompletedActivityById(Long id) {
-        CompletedActivity completedActivity = completedActivityRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Completed Activity not found"));
-        return convertToDto(completedActivity);
+    public CompletedActivityOutputDTO findCompletedActivityById(Long id) {
+        CompletedActivity entity = completedActivityRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("CompletedActivity no encontrado: " + id));
+        return toDto(entity);
     }
 
     @Override
-    public Page<CompletedActivityDTO> listCompletedActivities(String q, Pageable pageable) {
-        if (q == null || q.isBlank()) {
-            return completedActivityRepository.findAll(pageable).map(this::convertToDto);
+    public Page<CompletedActivityOutputDTO> listCompletedActivities(String q, Pageable pageable) {
+        if (q == null || q.trim().isEmpty()) {
+            return completedActivityRepository.findAll(pageable).map(this::toDto);
         }
-        return completedActivityRepository.findByNotesContainingIgnoreCase(q, pageable)
-                .map(this::convertToDto);
+        return completedActivityRepository.findByNotesContainingIgnoreCase(q.trim(), pageable)
+                .map(this::toDto);
     }
 
     @Override
-    public Page<CompletedActivityDTO> findCompletedActivitiesByUserId(Long userId, Pageable pageable) {
-        return completedActivityRepository.findByProgressLogUserId(userId, pageable)
-                .map(this::convertToDto);
+    public Page<CompletedActivityOutputDTO> findCompletedActivitiesByUserId(Long userId, Pageable pageable) {
+        return completedActivityRepository.findByProgressLog_User_Id(userId, pageable)
+                .map(this::toDto);
     }
 
     @Override
-    public Page<CompletedActivityDTO> findByProgressLogId(Long progressLogId, Pageable pageable) {
-        return completedActivityRepository.findByProgressLogId(progressLogId, pageable)
-                .map(this::convertToDto);
+    public Page<CompletedActivityOutputDTO> findByProgressLogId(Long progressLogId, Pageable pageable) {
+        return completedActivityRepository.findByProgressLog_Id(progressLogId, pageable)
+                .map(this::toDto);
     }
+
+  @Transactional(readOnly = true)
+public List<CompletedActivityOutputDTO> monthlyCompletedActivitiesByCategoryAndDate(String category, OffsetDateTime date) {
+    OffsetDateTime start = date.withDayOfMonth(1).withHour(0).withMinute(0).withSecond(0).withNano(0);
+    OffsetDateTime end = start.plusMonths(1);
+
+    List<CompletedActivity> activities = completedActivityRepository.findCompletedByCategoryAndMonth(
+            Habit.Category.valueOf(category.toUpperCase()), start, end);
+
+    return activities.stream()
+            .map(mapper::toDto)
+            .toList();
+}
+    @Override
+    @Transactional(readOnly = true)
+    public List<CompletedActivityOutputDTO> findByHabitId(Long habitId) {
+    return completedActivityRepository.findByHabit_Id(habitId)
+            .stream()
+            .map(this::toDto)
+            .toList();
+}   
+
 
 }
+
